Fix z-index of small search bar

--- a/glados/static/scss/chembl-style.scss
+++ b/glados/static/scss/chembl-style.scss
@@ -1395,7 +1395,7 @@ $marvin-size-fullscreen: 91vh;
   line-height: $chembl-nav-height;
   width: 100%;
   margin-top: 0px;
-  z-index: 999;
+  z-index: 998;
 }
 
 .marvin-search-options{
